--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.6.1",
+    "mdbreact": "^4.24.0",
+    "primeicons": "^2.0.0",
+    "primereact": "^3.3.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-multi-carousel": "^2.5.0",
+    "react-scripts": "3.3.0",
+    "react-spinners": "^0.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
